Added contact page with mailchimp news signup form

--- a/_includes/contact-tab.html
+++ b/_includes/contact-tab.html
@@ -1,3 +1,43 @@
 <div class="tab">
-	Contact info goes here
+	<div>
+		<ul class="contactlist" >
+			<li class="contactlistitem">
+				<h2 class="contactlistitemheading">Where Are We?</h2>
+				<div><iframe width="500" height="400" frameborder="0" src="https://www.bing.com/maps/embed/viewer.aspx?v=3&amp;cp=50.775341~0.095292&amp;lvl=18&amp;w=500&amp;h=400&amp;sty=h&amp;typ=d&amp;pp=~~50.775429~0.095289&amp;ps=&amp;dir=0&amp;mkt=en-gb&amp;src=SHELL&amp;form=BMEMJS"></iframe><div style="margin: 12px 0 0 0;"><a target="_blank" href="https://www.bing.com/maps/?cp=50.775341~0.095292&amp;sty=h&amp;lvl=18&amp;where1=50.775429,0.095289&amp;mm_embed=map">View Larger Map</a>&nbsp; |&nbsp; <a target="_blank" href="https://www.bing.com/maps/?cp=50.775341~0.095292&amp;sty=h&amp;lvl=18&amp;rtp=~pos.50.775429_0.095289__&amp;mm_embed=dir">Get Directions</a>&nbsp; |&nbsp; <a target="_blank" href="https://www.bing.com/maps/?cp=sfw9dxh074d0&amp;sty=b&amp;lvl=18&amp;where1=50.775429,0.095289&amp;mm_embed=be">View Bird's Eye</a></div></div>
+			</li>
+			<li class="contactlistitem">
+				<h2 class="contactlistitemheading">Contact by Snail Mail</h2>
+				<p>devoctomy</p>
+				<p>75 St. Crispians</p>
+				<p>Seaford</p>
+				<p>East Sussex</p>
+				<p>BN252DY</p>
+				<p>England, UK</p>
+			</li>
+			<li class="contactlistitem">
+				<h2 class="contactlistitemheading">Sign-up for the Latest News from devoctomy</h2>
+				<div class="newsletterform">
+					<!-- Begin MailChimp Signup Form -->
+					<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+					<style type="text/css">
+						#mc_embed_signup{background:transparent; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+						/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+						   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+					</style>
+					<div id="mc_embed_signup">
+						<form action="//npsoftware.us8.list-manage.com/subscribe/post?u=0218d89d78bb51ca8ac0c4479&amp;id=1bcf617398" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+							<div id="mc_embed_signup_scroll">
+							<label for="mce-EMAIL">Subscribe to our mailing list</label>
+							<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+							<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+							<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0218d89d78bb51ca8ac0c4479_1bcf617398" tabindex="-1" value=""></div>
+							<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+							</div>
+						</form>
+					</div>
+					<!--End mc_embed_signup-->
+				</div>
+			</li>
+		</ul>
+	</div>
 </div>
