Added emails to contact page

--- a/_includes/contact-tab.html
+++ b/_includes/contact-tab.html
@@ -15,6 +15,13 @@
 				<p>England, UK</p>
 			</li>
 			<li class="contactlistitem">
+				<h2 class="contactlistitemheading">Contact by E-Mail</h2>
+				<h3>Regarding this Website</h3>
+				<p><a href="mailto:webmaster@devoctomy">webmaster@devoctomy.com</a></p>
+				<h3>For technical support</h3>
+				<p><a href="mailto:support@devoctomy">support@devoctomy.com</a></p>
+			</li>
+			<li class="contactlistitem">
 				<h2 class="contactlistitemheading">Sign-up for the Latest News from devoctomy</h2>
 				<div class="newsletterform">
 					<!-- Begin MailChimp Signup Form -->
