--- a/_includes/category.html
+++ b/_includes/category.html
@@ -10,6 +10,9 @@
     <div class="previews__container">
       <span>Category</span>
       <h1>{{ page.title }}</h1>
+	  <div>
+		<img src="/assets/images/devoctomy_icon.png" />
+	  </div>
     </div>
   </div>
 
