--- a/_includes/about-tab.html
+++ b/_includes/about-tab.html
@@ -1,8 +1,7 @@
-<div class="tab">
-	<img src="/assets/images/devoctomy.png" />
+<div class="tab" markdown="1">
+	<div style="margin-left: 32px; margin-right: 32px">
+		<img src="/assets/images/devoctomy.png" />
 	
-	{% markdown about.markdown %}
-	
-	{% capture my-include %}{% include about.markdown %}{% endcapture %}
-	{{ my-include | markdownify }}
+		{% markdown about.markdown %}
+	</div>
 </div>
