--- a/_includes/about-tab.html
+++ b/_includes/about-tab.html
@@ -2,6 +2,16 @@
 	<div style="margin-left: 32px; margin-right: 32px">
 		<img src="/assets/images/devoctomy.png" />
 	
-		{% markdown about.markdown %}
+		{% markdown about1.markdown %}
+		
+		<div style="width: 320px;margin-left: auto;margin-right: auto;">
+			<img src="/assets/images/nick.jpg" alt="Nick Pateman (CEO)"></img>
+			<p>Nick Pateman (CEO)</p>
+			<br/>
+			<img src="/assets/images/marc.jpg" alt="Marc McKerracher (Head of QA)"></img>
+			<p>Marc McKerracher (Head of QA)</p>
+		</div>
+		
+		{% markdown about2.markdown %}
 	</div>
 </div>
