--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,10 @@ layout: default
 
   <section class="section-padding post" itemprop="articleBody">
     {{ content }}
-  </section>
+
+	{% include share.html %}
+	</section>
+  
 
   <section class="profile">
     <div class="profile__card">
@@ -45,7 +48,7 @@ layout: default
       </div>
     </div>
   </section>
-
+  
 </article>
 
 {% if site.comments %}
