Moved share buttons to the top of the page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,13 +21,18 @@ layout: default
     </div>
   </header>
 
+  <section class="profile" style="margin-top: 32px; height: 0px">
+    <div>
+      <div>
+		{% include share.html %}
+      </div>
+    </div>
+  </section>
+
   <section class="section-padding post" itemprop="articleBody">
     {{ content }}
-
-	{% include share.html %}
-	</section>
-  
-
+  </section>
+   
   <section class="profile">
     <div class="profile__card">
       <div class="profile__img">
