--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,5 +1,5 @@
-<div style="text-align: right;">
-	<ul class="share-buttons">
+<div class="share-buttons-container">
+	<ul class="profile__social">
 		<li><a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}&t={{ page.title }}" target="_blank" title="Share on Facebook"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i><span class="sr-only">Share on Facebook</span></a></li>
 		<li><a href="https://twitter.com/intent/tweet?text={{ page.title }}%20{{ site.url }}{{ page.url }}%20via%20&#64;{{ site.social.twitter }}&hashtags={% for category in page.categories %}{{category}},{% endfor %}" target="_blank" title="Tweet"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i><span class="sr-only">Tweet</span></a></li>
 		<li><a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" target="_blank" title="Share on Google+"><i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i><span class="sr-only">Share on Google+</span></a></li>
