--- a/_includes/about-tab.html
+++ b/_includes/about-tab.html
@@ -6,7 +6,10 @@
 		
 		<div style="width: 320px;margin-left: auto;margin-right: auto;">
 			<img src="/assets/images/nick.jpg" alt="Nick Pateman (CEO)"></img>
-			<p>Nick Pateman (CEO)</p>
+			<p>Nick Pateman (CEO)
+			<br/>
+			<a href="http://www.npsoftware.co.uk">Nick's Personal Website</a>
+			</p>
 			<br/>
 			<img src="/assets/images/marc.jpg" alt="Marc McKerracher (Head of QA)"></img>
 			<p>Marc McKerracher (Head of QA)</p>
