Added new ideas page and tweaked styling

--- a/_includes/about-tab.html
+++ b/_includes/about-tab.html
@@ -1,20 +1,32 @@
 <div class="tab" markdown="1">
-	<div style="margin-left: 32px; margin-right: 32px">
-		<img src="/assets/images/devoctomy.png" />
+  <div style="margin-left: 32px; margin-right: 32px">
+    <img src="/assets/images/devoctomy.png" />
 	
-		{% markdown about1.markdown %}
+    <h2 class="preview__header">Who Are We?</h2>
+
+    Founded in February 2015, devoctomy is a software development company that specialises in all things Windows, we consist of 2; Microsoft fan boys, Nick Pateman the CEO and sole developer, and Marc McKerracher the tester in chief (so if anything doesn't work, it's his fault).
+
+    We are based on the south coast of England, near sunny ol' Brighton (Where all the cool kids go).
 		
-		<div style="width: 320px;margin-left: auto;margin-right: auto;">
-			<img src="/assets/images/nick.jpg" alt="Nick Pateman (CEO)"></img>
-			<p>Nick Pateman (CEO)
-			<br/>
-			<a href="http://www.npsoftware.co.uk">Nick's Personal Website</a>
-			</p>
-			<br/>
-			<img src="/assets/images/marc.jpg" alt="Marc McKerracher (Head of QA)"></img>
-			<p>Marc McKerracher (Head of QA)</p>
-		</div>
-		
-		{% markdown about2.markdown %}
+	<div style="width: 320px;margin-left: auto;margin-right: auto;">
+	  <img src="/assets/images/nick.jpg" alt="Nick Pateman (CEO)"></img>
+	  <p>Nick Pateman (CEO)
+	  <br/>
+	  <a href="http://www.npsoftware.co.uk">Nick's Personal Website</a>
+	  </p>
+	  <br/>
+      <img src="/assets/images/marc.jpg" alt="Marc McKerracher (Head of QA)"></img>
+	  <p>Marc McKerracher (Head of QA)</p>
 	</div>
+		
+    <h2 class="preview__header">What Do We Do?</h2>
+
+    Simply put, we write software of various kinds, primarily Windows Based.  Although we haven't released anything just yet, we have an archive of potentially cool and fun products that we plan on releasing in the near future.  We just need to polish off some final bits in order to ready them for the public.
+
+    That includes games and applications.  If you would like to stay notified of our developments, come back regularly and read our blog posts, or alternatively you can sign up for our newsletter on the 'About' page.
+
+    <h2 class="preview__header">About The Website</h2>
+
+    This website was created using an open-source Jekyll theme from <a href="https://github.com/thomasvaeth/trophy-jekyll">Thomas Vaeth</a>.  Picked for its simple but elegant design.  You might ask that if we are a software development company, why didn't we create our own?  Well you may or may not know that the world of software development is a huge field, website development is not our forte so we would rather leave it to those that can do it best.  Plus as the code is open-source, feel free to download and play with it.	
+  </div>
 </div>
