--- a/_includes/category.html
+++ b/_includes/category.html
@@ -1,7 +1,7 @@
 <section class="previews">
   <div>
     <a class="nav nav--white" href="{{ site.baseurl }}/">
-      <i class="fa fa-lg fa-arrow-left"></i>
+      <i class="fas fa-arrow-left"></i>
       <span>Back to Posts</span>
     </a>
     {% for post in site.categories[page.title] %}
