--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,12 @@ layout: default
     </a>
     <figure class="absolute-bg mast__img" style="background-image: url('{{ page.image }}');"></figure>
     <div class="mast__container">
-      <span><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></span>
+	  {% if page.type == "blog" %}
+        <span>Published: <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></span>
+	  {% else %}
+        <span>Published: <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></span>
+        <span>Last Updated: <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></span>
+	  {% endif %}
       <h1 itemprop="name headline">{{ page.title }}</h1>
       {% if page.categories.size > 0 %}
         <span>
@@ -43,13 +48,13 @@ layout: default
         {% if site.authors[page.author].email or site.authors[page.author].social %}
           <ul class="profile__social">
             {% if site.authors[page.author].email %}
-              <li><a class="fa fa-lg fa-envelope-o" href="mailto:{{ site.authors[page.author].email }}"></a></li>
+              <li><a class="fas fa-envelope" href="mailto:{{ site.authors[page.author].email }}"></a></li>
             {% endif %}
             {% if site.authors[page.author].personalwebsite %}
               <li><a class="fa fa-lg fa-globe" href="{{ site.authors[page.author].personalwebsite }}"></a></li>
             {% endif %}			
             {% for social in site.authors[page.author].social %}
-              <li><a class="fa fa-lg fa-{{ social[0] }}" href="{{ social[1] }}" target="_blank"></a></li>
+              <li><a class="fab fa-{{ social[0] }}" href="{{ social[1] }}" target="_blank"></a></li>
             {% endfor %}
           </ul>
         {% endif %}
@@ -80,15 +85,4 @@ layout: default
 	</script>
 	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.	</a>
 	</noscript>
-{% endif %}
-
-{% if page.previous.url %}
-  <section class="next">
-    <a class="next__link" href="{{page.previous.url | prepend: site.baseurl }}" style="background-image: url('{{ page.previous.image }}');">
-      <div class="next__container">
-        <span>Read Next</span>
-        <h2>{{page.previous.title}}</h2>
-      </div>
-    </a>
-  </section>
 {% endif %}
