Removed google maps, images of myself and marc, plus simplified the description.

--- a/_includes/about-tab.html
+++ b/_includes/about-tab.html
@@ -4,20 +4,7 @@
 	
     <h2 class="preview__header">Who Are We?</h2>
 
-    Founded in February 2015, devoctomy is a software development company that specialises in all things Windows, we consist of 2; Microsoft fan boys, Nick Pateman the CEO and sole developer, and Marc McKerracher the tester in chief (so if anything doesn't work, it's his fault).
-
-    We are based on the south coast of England, near sunny ol' Brighton (Where all the cool kids go).
-		
-	<div style="width: 320px;margin-left: auto;margin-right: auto;">
-	  <img src="/assets/images/nick.jpg" alt="Nick Pateman (CEO)"></img>
-	  <p>Nick Pateman (CEO)
-	  <br/>
-	  <a href="http://www.npsoftware.co.uk">Nick's Personal Website</a>
-	  </p>
-	  <br/>
-      <img src="/assets/images/marc.jpg" alt="Marc McKerracher (Head of QA)"></img>
-	  <p>Marc McKerracher (Head of QA)</p>
-	</div>
+    Founded in February 2015, devoctomy is a software development company that specialises in all things Windows, based on the south coast of England, near sunny ol' Brighton (Where all the cool kids go).
 		
     <h2 class="preview__header">What Do We Do?</h2>
 
