--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,4 +29,5 @@
 
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="canonical" href="{{ page.url | replace: 'index.html', '' | prepend: site.baseurl | prepend: site.url }}">
-</head>
+	<link rel="icon" type="image/png" href="/favicon.ico" />
+  </head>
