--- a/_includes/about-tab.html
+++ b/_includes/about-tab.html
@@ -4,13 +4,13 @@
 	
     <h2 class="preview__header">Who Are We?</h2>
 
-    Founded in February 2015, devoctomy is a software development company that specialises in all things Windows, based on the south coast of England, near sunny ol' Brighton (Where all the cool kids go).
+    Founded in February 2015, devoctomy is a small software development company based on the south coast of England, near sunny ol' Brighton (Where all the cool kids go).
 		
     <h2 class="preview__header">What Do We Do?</h2>
 
-    Simply put, we write software of various kinds, primarily Windows Based.  Although we haven't released anything just yet, we have an archive of potentially cool and fun products that we plan on releasing in the near future.  We just need to polish off some final bits in order to ready them for the public.
-
-    That includes games and applications.  If you would like to stay notified of our developments, come back regularly and read our blog posts, or alternatively you can sign up for our newsletter on the 'About' page.
+    Simply put, we write software of various kinds, primarily Android and Windows Based.
+	<br/><br/>
+	If you would like to stay up-to-date of our developments, come back regularly and read our blog posts.	
 
     <h2 class="preview__header">About The Website</h2>
 
